THREAD SAFETY AND OFFLAND IGNORED BUGFIX