@@ -5,7 +5,6 @@ import net.mathimomos.wormhole_artifact.server.item.ModItems;
 import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.minecraftforge.network.NetworkEvent;
@@ -13,7 +12,6 @@ import net.minecraftforge.network.PacketDistributor;
 
 import java.util.List;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 public class PlayerListRequestMessage {
     public PlayerListRequestMessage() {
@@ -28,22 +26,23 @@ public class PlayerListRequestMessage {
 
     public static void handle(PlayerListRequestMessage message, Supplier<NetworkEvent.Context> contextSupplier) {
         NetworkEvent.Context context = contextSupplier.get();
-        ServerPlayer serverPlayer = context.getSender();
-        Level pLevel = serverPlayer.level();
         context.enqueueWork(() -> {
+            ServerPlayer serverPlayer = context.getSender();
+
+            Level pLevel = serverPlayer.level();
 
             List<PlayerData> playerDataList = pLevel.getServer().getPlayerList().getPlayers().stream()
-                    .filter(player -> hasWormholeArtifactsInInventory(player))
-                    //.filter(player -> !player.getName().getString().equals(serverPlayer.getName().getString()))
                     .filter(player -> player.isAlive())
+                    .filter(player -> !player.getName().getString().equals(serverPlayer.getName().getString()))
+                    .filter(player -> hasWormholeItemsInInventory(player))
                     .filter(player -> isDimensionRestricted(serverPlayer) ? player.level() == serverPlayer.level() : true)
                     .map(player -> {
                         String name = player.getName().getString();
                         String dimension = player.level().dimension().location().toString();
-                        int distance = (player.level() == serverPlayer.level()) ? (int) Math.sqrt(serverPlayer.distanceToSqr(player)) : -1;
+                        int distance = (player.level() == pLevel) ? (int) Math.sqrt(serverPlayer.distanceToSqr(player)) : -1;
                         return new PlayerData(name, dimension, distance);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
 
             WormholeArtifact.NETWORK_WRAPPER.send(PacketDistributor.PLAYER.with(() -> serverPlayer),
                     new PlayerListResponseMessage(playerDataList));
@@ -55,7 +54,7 @@ public class PlayerListRequestMessage {
         return stack.getItem() == ModItems.WORMHOLE_ARTIFACT.get() || stack.getItem() == ModItems.WORMHOLE_REMOTE.get();
     }
 
-    private static boolean hasWormholeArtifactsInInventory(Player pPlayer) {
+    private static boolean hasWormholeItemsInInventory(Player pPlayer) {
         for (ItemStack stack : pPlayer.getInventory().items) {
             if (isWormholeItem(stack)) return true;
         }
@@ -63,9 +62,6 @@ public class PlayerListRequestMessage {
     }
 
     private static boolean isDimensionRestricted(Player pPlayer) {
-        ItemStack stackMain = pPlayer.getMainHandItem();
-        ItemStack stackOff = pPlayer.getOffhandItem();
-
-        return stackMain.getItem() == ModItems.WORMHOLE_ARTIFACT.get() || stackOff.getItem() == ModItems.WORMHOLE_ARTIFACT.get();
+        return pPlayer.getMainHandItem().getItem() == ModItems.WORMHOLE_ARTIFACT.get() || pPlayer.getOffhandItem().getItem() == ModItems.WORMHOLE_ARTIFACT.get();
     }
 }
